--- a/src/components/EmailForm/styles.module.scss
+++ b/src/components/EmailForm/styles.module.scss
@@ -6,9 +6,13 @@
   flex-direction: column;
   align-items: center;
 
+  padding: 2rem;
   gap: 1.5rem;
 
+  background-color: $cardBackground;
+  color: $mainHeaderColor;
   font-size: 0.8rem;
+  border-radius: 8px;
 }
 
 .emailForm div {
@@ -25,6 +29,10 @@
 
   border-radius: 5px;
   font-family: inherit;
+}
+.emailForm textarea {
+  min-height: 50vh;
+  resize: vertical;
 }
 
 .emailForm input {
