--- a/src/components/TechStack/styles.module.scss
+++ b/src/components/TechStack/styles.module.scss
@@ -10,6 +10,7 @@
   margin: 3rem 0;
   padding: 2rem 0 3rem;
 
+  min-height: 100vh;
   color: $mainHeaderColor;
   background: $mainBodyBackgroundBlack;
   box-shadow: 0 0 1rem 0 $mainTextColorBlack;
